# N64ENGINemu

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.claude/agents/: cpu-core.md  graphics-rdp.md  planner.md
.github/workflows/: ci.yml
include/n64/: controller.h  cop0.h  cop1.h  frame_timing.h  gfx_backend.h  input.h  pi.h  rdram.h  rom.h  rsp_hle.h  sprite_scene.h  vi.h  video.h  vr4300.h
src/: main.cpp
src/cpu/: vr4300.cpp
src/input/: input.cpp
src/mem/: controller.cpp  pi.cpp  rdram.cpp  rom.cpp
src/video/: frame_timing.cpp  rsp_hle.cpp  sprite_scene.cpp  vi.cpp  video.cpp
tests/: CMakeLists.txt  test_controller.cpp  test_frame_timing.cpp  test_framework.h  test_pi.cpp  test_rdram.cpp  test_rsp_hle.cpp  test_sprite_scene.cpp  test_vi.cpp  test_vr4300.cpp
